Added a new optional configurable argument for user to specify the last sector of an image. Minor changes to order of code execution to certain part of the application. Slight optimization fixes to application. Tidying up some format issue of usage menu and documentations. Updated README file with a little more information as well as typo error corrections.

--- a/README
+++ b/README
@@ -76,7 +76,7 @@ distrubution buster suite.
 
 
 ***Disclaimer***
-There is no gaurantee that this software will repair a corrupted
+There is no certainty that this software will repair a corrupted
 media device. However, there is no harm in using it since the device
 is already in an unusable state. Moreover, the software has
 a backup option to save the existing bad data to an image file
@@ -94,10 +94,15 @@ None at the moment
 Email: simon.omni.acc@gmail.com
 
 
+***License***
+Software package comes with a license described in ./LICENSE file.
+
+
 ***Links***
 GitHub Pages (none currently):
 	https = https://simonSilverse.github.io/fsDigger
 Source code:
-	https = https://github.com/simonSilverse/fsDigger.git
-	ssh = ssh://git@github.com:simonSilverse/fsDigger.git
-	cli = gh repo clone simonSilverse/fsDigger
+	https https://github.com/simonSilverse/fsDigger.git
+	ssh ssh://git@github.com:simonSilverse/fsDigger.git
+	cli #gh repo clone simonSilverse/fsDigger
+	cli #tag="v1.1.1"; git clone --branch $tag https://github.com/simonSilverse/fsDigger.git "coreutils_$tag"
